Adicionando Modulo de rotas no projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,17 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home </a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Rock </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Pagode </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Forró </a>
+      </li>
     </ul>
 </nav>
 <div class="container">
-  <app-listar-bandas></app-listar-bandas>
+  <router-outlet></router-outlet>
 </div>
