--- a/src/app/listar-bandas/listar-bandas.component.html
+++ b/src/app/listar-bandas/listar-bandas.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3" *ngIf="listarBandas;else loading">
+<div class="row mt-3" *ngIf="listarBandas; else loading">
     <div class="col-md-4" *ngFor="let banda of listarBandas">
       <div class="card">
         <div class="card-body">
@@ -11,5 +11,6 @@
 </div>
 
 <ng-template #loading>
-  Carregando informações
+  Carregando Informações
 </ng-template>
+
