--- a/src/app/categoria/categoria.component.html
+++ b/src/app/categoria/categoria.component.html
@@ -1,3 +1,11 @@
-<p>
-  categoria works!
-</p>
+<div class="row mt-3">
+  <div class="col-md-4" *ngFor="let categoia of bandaCategoria">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{ categoia.name }}</h5>
+        <p class="card-text">{{ categoia.info }} </p>
+        <a href="#" class="btn btn-primary">Detalhe da Banda</a>
+      </div>
+    </div>
+  </div>
+</div>
