Criando componente compartilhado de bandas

--- a/src/app/listar-bandas/listar-bandas.component.html
+++ b/src/app/listar-bandas/listar-bandas.component.html
@@ -1,16 +1,1 @@
-<div class="row mt-3" *ngIf="listarBandas; else loading">
-    <div class="col-md-4" *ngFor="let banda of listarBandas">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">{{ banda.name }}</h5>
-          <p class="card-text"> {{ banda.info }}</p>
-          <a href="#" class="btn btn-primary">Detalhe da Banda</a>
-        </div>
-    </div>
-  </div>
-</div>
-
-<ng-template #loading>
-  Carregando Informações
-</ng-template>
-
+<app-banda [bandas]="listarBandas"></app-banda>
