--- a/src/app/banda-detalhe/banda-detalhe.component.html
+++ b/src/app/banda-detalhe/banda-detalhe.component.html
@@ -1,3 +1,26 @@
-<p>
-  banda-detalhe works!
-</p>
+<div class="row mt-3" *ngIf="info; else loading">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title">{{ info.name }}</h2>
+        <p class="card-text"> {{ info.info }}</p>
+        <h3 class="mt-2">Membros da banda</h3>
+        <ul>
+            <li *ngFor="let members of info.members">
+                {{ members.nome }}
+            </li>
+        </ul>
+        <h3 class="mt-2">Álbuns da Banda</h3>
+        <ul>
+          <li *ngFor="let album of albuns">
+            <a [routerLink]= "['/album-detalhe', album.id ]">{{ album.name }}</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<ng-template #loading>
+  Carregando Informação
+</ng-template>
